# autoencoders

./: .gitignore  README.md  pyproject.toml  requirements.txt
autoencoders/: data.py  lightning_extension.py
autoencoders/models/: deep.py  denoise.py  simple.py  sparse.py
autoencoders/scripts/: download_mnist.py  run.py
notebooks/: Unsupervised-Introduction.ipynb
tests/: test_data.py
