[tool.poetry]
name = "autoencoders"
version = "0.1.0"
description = ""
authors = ["arrrrrmin <info@dotarmin.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
tensorboard = "^2.12.0"
scikit-image = "^0.20.0"
jupyter = "^1.0.0"
torch = "1.13"
lightning = "1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
